Update and rename Moreaboutme.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>More About Me</title>
     <link rel="stylesheet" href="morestyles.css">
     <link rel="stylesheet" href="moreanimations.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +22,9 @@
         </div>
         <div class="anchor-container">
             <nav>
-            <a href="#about" class="anchor">About Me</a>
+            <a href="https://mypersonalwebsiteperez.netlify.app/#about" class="anchor">About Me</a>
             <a href="#" class=>More</a>
-            <a href="#">Contact Info</a>
+            <a href="https://contactinfoperez.netlify.app/">Contact Info</a>
             </nav>
         </div>
     </div>
